frontend/test/context/success/globaldecref.fc
extern int g;

int foo() {
    return g;
}
