frontend/test/context/error/redefined-function.fc
void foo() {}

int foo() {
    return 0;
}
